<resources>
    <string name="app_name">NewsBits</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="api_key">pub_149302058f4d98a8edef92c902d9acd74c811</string>
    <string name="api_key2">pub_150062e14ee2a74d4da97cab8b5dd391df074</string>
    <string name="api_key3">pub_151731bd802ed893c4544f475666b325661fe</string>
    <string name="api_key4">pub_151797dfccd0d79262711936c0cd7f7515bc7</string>
    <string name="google_id">670060116767-2k495qmh9ro8rah9d30kj3reskrimn7v.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1466774480515230</string>
    <string name="fb_login_protocol_scheme">fb1466774480515230</string>
    <string name="facebook_client_token">be6c0122084cd1227c60fe4aad43ba73</string>
    <string name="item_search">Search</string>
    <string name="item_share">Share</string>
    <string name="item_like">Like</string>
    <string name="item_preferred">Preferred</string>
    <string name="item_recommend">Recommended</string>
    <string name="item_favourite">Favourites</string>
    <string name="suggested_category">Suggested Category: </string>
    <string name="default_login">Login</string>
    <string name="default_title">News Title</string>
    <string name="default_register">Register</string>
    <string name="hint_name">Enter Username</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="attempts_remaining">Attempts Remaining: </string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="google_login">Login with Google</string>
    <string name="facebook_register">Register with Facebook</string>
    <string name="google_register">Register with Google</string>
    <string name="no_account">No account?</string>
    <string name="cancel_text">Cancel</string>
    <string name="default_date">DD/MM/YYYY</string>
    <string name="default_description">Description</string>
    <string name="default_img_description">News Image</string>
    <string name="category_bus">business</string>
    <string name="category_ent">entertainment</string>
    <string name="category_env">environment</string>
    <string name="category_foo">food</string>
    <string name="category_hea">health</string>
    <string name="category_pol">politics</string>
    <string name="category_sci">science</string>
    <string name="category_spo">sports</string>
    <string name="category_tec">technology</string>
    <string name="category_top">top</string>
    <string name="category_wor">world</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="img_content">Article Image</string>
    <string name="read_more">Click to Read More...</string>
    <string name="logout_sucess">Logged out successfully</string>
    <string name="already_logout">Already logged out</string>
    <string name="full_text">See full content on website</string>
    <string name="logged_text">Must be logged in to set preferences</string>
    <string name="img_profile">Profile Image</string>
    <string name="return_home">Return Home</string>
    <string name="or_text">OR</string>
    <string name="done_text">Done</string>
    <string name="no_favourites">No Favourites Saved</string>
    <string name="select_text">Select Preferred Categories:</string>
    <string name="set_notifications">Set Notifications</string>
    <string name="refresh_xml" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_available">N/A</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="terms_conditions">I agree to the terms and conditions</string>
    <string name="push_notifications">I agree to receive notifications and updates</string>
</resources>