<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:contentDescription="@string/item_share"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/like"
        android:title="@string/item_like"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/item_like"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/search"
        android:title="@string/item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:contentDescription="@string/item_search"
        app:showAsAction="always"
        />



</menu>